[metadata]
name = odm
description = Storage Magic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UMCollab/ODM
author = Ezekiel Hendrickson
author_email = ezekielh@umich.edu
license = MIT

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages =
    odm
    odm.libexec
install_requires =
    adal
    beautifulsoup4
    boxsdk[jwt]
    google-auth
    lmdb
    lxml
    panflute
    puremagic
    pypandoc
    python-dateutil
    pyyaml
    requests
    requests_oauthlib
    requests_toolbelt
    svgwrite

[options.extras_require]
dev =
    pytest
    pytest-flake8

[options.entry_points]
console_scripts =
    bm = odm.libexec.wrapper:main
    gdm = odm.libexec.wrapper:main
    odm = odm.libexec.wrapper:main

[tool:pytest]
addopts = -v --flake8
flake8-max-line-length = 160
